# archbuilder.ai

./: .gitignore  .pre-commit-config.yaml  AUTOMATED_SECURITY_SUGGESTIONS.md  BACKUP_AND_COMPARISON_REPORT.md  BRANCH_INTEGRATION_ROADMAP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PR_AI_PROCESSING_PIPELINE.md  README.md  TODO.md  cursortodo.md  dev-tools.ps1  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  env.example  tododevam.md  version.md
src/cloud-server/: .dockerignore  .env.example  AGENTS.md  Dockerfile  pyproject.toml  requirements-backup.txt  requirements-dev.txt  requirements.txt
src/cloud-server/app/: AGENTS.md  main.py
src/cloud-server/app/ai/: AGENTS.md  chunking.py  interfaces.py  legacy_stubs.py  model_selector.py
src/cloud-server/app/core/: AGENTS.md  ai_request_pool.py  cache.py  celery_app.py  config.py  connection_pool.py  database.py  enhanced_security.py  exceptions.py  input_validation.py  logging.py  metrics.py  middleware.py  query_profiler.py  rate_limit.py  security_headers.py  vault_integration.py  websocket_scaling.py
src/cloud-server/app/database/: AGENTS.md  session.py
src/cloud-server/app/middleware/: AGENTS.md  license_middleware.py  tenant_security.py
src/cloud-server/app/routers/: layout_router.py
src/cloud-server/app/schemas/: AGENTS.md  ai.py  layout_schemas.py
src/cloud-server/app/security/: AGENTS.md  authorization.py  (+3 more)
src/cloud-server/tests/: load_tests.py  test_ai_integration.py  test_analyze_project.py  test_enhanced_auth.py  test_enhanced_security.py  test_validation_systems.py
(+309 files in other folders)
